# audio-loop-gen

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
audio_loop_gen/: audiogen.py  cli.py  client.py  generator.py  logging.py  looper.py  loopgen.py  main.py  pipeline.py  prompt_watch.py  promptgen.py  server.py  test.py  util.py
audio_loop_gen/loop_strategy/: __init__.py  base.py  beat_detect.py  crossfade.py  fade_in_out.py  transient_aligned.py
audio_loop_gen/prompt_source/: base.py  openai.py
audio_loop_gen/promptgen/: __init__.py  base.py  manual.py  ollama.py  openai.py
audio_loop_gen/store/: __init__.py  base.py  file.py  s3.py
audio_loop_gen/strategy/: __init__.py  base.py  beat_detect.py  crossfade.py  fade_in_out.py  transient_aligned.py
docs/: README.md
docs/examples/: README.md
docs/examples/demo/: index.html  index.json  main.js
docs/examples/demo/music/action/: 2.json
docs/examples/demo/music/cartoon/: 1.json  3.json
docs/examples/local-player/: index.html
examples/: local-loop-player.html
examples/demo/: index.html  main.js
examples/demo/music/action/: 1.json  3.json  4.json  5.json
examples/demo/music/cartoon/: 2.json  4.json  5.json
examples/demo/music/lounge/: 1.json  2.json  4.json
examples/demo/music/puzzle/: 1.json  2.json
examples/demo/music/video/: 3.json  5.json
examples/local-player/: index.html  main.js
loopgen/: generator.py  loopgen.py  main.py  util.py
loopgen/loop_strategies/: __init__.py  base.py  beat_aligned.py  crossfade.py  fade_in_out.py  transient_aligned.py
(+8 files in other folders)
